fix loader alignment and retry button responsiveness

--- a/BTCPayServer/wwwroot/checkout/css/normalizer.css
+++ b/BTCPayServer/wwwroot/checkout/css/normalizer.css
@@ -11480,6 +11480,11 @@ low-fee-timeline {
 .changelly-component .general__spinner bp-spinner {
     width: 50px;
     height: 50px;
+    
+}
+
+.changelly-component .general__spinner bp-spinner svg {
+    margin: 0;
 }
 
 .changelly-component .retry-button {
@@ -11487,12 +11492,21 @@ low-fee-timeline {
     border: 1px solid #a9a9a9;
     background: #fff;
     color: #000;
-    height:30px;
-    width:100px;
-    
+    min-width:100px;  
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    min-height: 30px;
+    word-break: break-all;
 }
+
 .changelly-component .retry-button :hover{
     border-color: #7f7f7f;
 }
+
+.changelly-component .prettydropdown li img {
+    width:20px; 
+    margin-right: 5px;
+}
+
 
 
